fix align problem
body {
    background: #80a8cc;
+    margin: 0;
}

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body {
     background: #80a8cc;
+    margin: 0;
 }
 
 
